--- a/src/App.css
+++ b/src/App.css
@@ -35,7 +35,11 @@ font-size: 16px;
   width: 80%;
   height: 500px;
 }
-.list-group-item{
+.list-items{
+  width: 47%;
+  font-size: 16px;
+}
+.list-features{
   width: 47%;
   font-size: 16px;
 }
